[gd_scene load_steps=8 format=3 uid="uid://kv7rlo3ma1pq"]

[ext_resource type="Script" uid="uid://bjr7n3j5iixk" path="res://src/ui/slider_option.gd" id="1_6p5pg"]

[sub_resource type="Animation" id="Animation_2500f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.564706)]
}

[sub_resource type="Animation" id="Animation_2lruj"]
resource_name = "fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.564706), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2500f"]
_data = {
&"RESET": SubResource("Animation_2500f"),
&"fade_in": SubResource("Animation_2lruj")
}

[sub_resource type="Animation" id="Animation_2222a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label_Text:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HSlider_Value:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(211.556, 0)]
}

[sub_resource type="Animation" id="Animation_5oby2"]
resource_name = "slide_out"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label_Text:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(16, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HSlider_Value:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(211.556, 0), Vector2(228, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2222a"]
_data = {
&"RESET": SubResource("Animation_2222a"),
&"slide_out": SubResource("Animation_5oby2")
}

[node name="SliderOption" type="Control"]
modulate = Color(1, 1, 1, 0.564706)
layout_mode = 3
anchors_preset = 0
offset_right = 464.0
offset_bottom = 27.0
script = ExtResource("1_6p5pg")

[node name="Label_Text" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "TextOption"
vertical_alignment = 1

[node name="Label_Value" type="Label" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -33.556
offset_right = 0.444
offset_bottom = -0.111
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HSlider_Value" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 254.0
offset_top = 3.0
offset_right = -29.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -205.556
offset_bottom = -0.111
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2500f")
}

[node name="AnimationPlayer_Offset" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2222a")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="drag_ended" from="HSlider_Value" to="." method="_on_h_slider_value_drag_ended"]
[connection signal="value_changed" from="HSlider_Value" to="." method="_on_h_slider_value_value_changed"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
